Updated attacking move to account for multijumps
Forces multijumps when available by only allowing for the user to perform the multijump instead of choosing just one jump.
